# bestllm

./: AGENTS.md  README.md  pyproject.toml
media/: logo.xcf
src/bestllm/: __init__.py  hardware.py  models.py  selector.py
tests/: __init__.py  conftest.py
tests/bestllm/: test_api.py  test_hardware.py  test_models.py  test_selector.py
