[project]
name = "bestllm"
version = "0.0.1"
description = "Tries to pick the best local llm for your computer and environment."
readme = "README.md"
authors = [
    { name = "Timothy Crosley", email = "timothy.crosley@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bestllm = "bestllm:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
    "pytest>=8.0.0",
]
